--- a/package.json
+++ b/package.json
@@ -7,5 +7,20 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "name": "api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node server.js",
+    "server" : "nodemon server.js",
+    "client": "npm start --prefix ./client",
+    "dev": "concurrently \"npm start\" \"npm run client\"" 
+  },
+  "description": ""
 }
